<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/main_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_padding"
                android:text="@string/berlin"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/tv_title_city" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/time"
                android:textColor="@color/txt_grey"
                android:textSize="@dimen/tv_update" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_padding"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/weather_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <TextView
                    android:id="@+id/temp_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_range"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/tv_temperature" />
            </LinearLayout>

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/weatherMain"

                android:textColor="@color/txt_white"
                android:textSize="@dimen/tv_weather"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/min_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/min_max_temp"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/tv_update" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:layout_marginTop="@dimen/bigpadding"
                android:background="@color/background_white_transparent"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_weight="1"
                android:text="@string/details"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/tv_title"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/humidity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_title"
                    android:textColor="@color/background_white"
                    android:textSize="@dimen/tv_standard" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/humidity"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/tv_standard" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:background="@color/background_white_transparent"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pressure_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_title"
                    android:textColor="@color/background_white"
                    android:textSize="@dimen/tv_standard" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/pressure"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/tv_standard" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:background="@color/background_white_transparent"
                android:orientation="horizontal">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wind_speed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed_title"
                    android:textColor="@color/background_white"
                    android:textSize="@dimen/tv_standard" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/wind_speed"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/tv_standard" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:background="@color/background_white_transparent"
                android:orientation="horizontal">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sunrise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_title"
                    android:textColor="@color/background_white"
                    android:textSize="@dimen/tv_standard" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/sunrise"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/tv_standard" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:background="@color/background_white_transparent"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_padding"
                android:layout_marginTop="@dimen/main_padding"
                android:layout_marginRight="@dimen/main_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sunset_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset_title"
                    android:textColor="@color/background_white"
                    android:textSize="@dimen/tv_standard" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/sunset"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/tv_standard" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>