<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.weather_main.MainActivity">

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_padding"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/london"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/min_padding"
            android:layout_weight="1"
            android:background="@drawable/btn_big_transparent"
            android:text="@string/london"
            android:textColor="@color/txt_white"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/berlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/min_padding"
            android:background="@drawable/btn_big_transparent"
            android:textColor="@color/txt_white"
            android:layout_weight="1"
            android:text="@string/berlin"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/paris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/min_padding"
            android:background="@drawable/btn_big_transparent"
            android:textColor="@color/txt_white"
            android:layout_weight="1"
            android:text="@string/paris"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/amsterdam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_big_transparent"
            android:textColor="@color/txt_white"
            android:layout_weight="1"
            android:text="@string/amsterdam"
            style="?android:attr/buttonBarStyle"/>


    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/first_row"/>

</RelativeLayout>